fix padding/gap

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,12 +1,11 @@
 /* Styles for Mobile devices */
 .container {
-  min-width: 320px;
   max-width: 375px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
